原案をもとに、elseボタン、削除ボタン、現在ステージ/行数/コイン数/ワンアップ数のtextBox追加。それぞれのコントローラーのDockプロパティをFillにすると、画面サイズ変更に対応できます。 - 課題 ＊「ステージ選択」などのボタンをpictureBoxに重ねたい。 ＊「くり返し」にNumericUpDown追加したい。 ＊「もし」にドロップダウン追加 ＊行数/列数、レイアウトは適宜変更しても構わないです。

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Objects\Players\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\GameForm.resx">
+      <DependentUpon>GameForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\selectstage.resx">
       <DependentUpon>Selectstage.cs</DependentUpon>
     </EmbeddedResource>
