--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -80,14 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Fields\stage1.json" />
     <None Include="Fields\stage10.json" />
     <None Include="Fields\stage2.json" />
@@ -103,6 +98,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -123,7 +123,41 @@
     <Content Include="Images\Player_None.jpg" />
     <Content Include="Images\Player_Right.jpg" />
     <Content Include="Images\Player_Up.jpg" />
+    <Content Include="Images\Teleporer_in2.jpg" />
+    <Content Include="Images\Teleporter_in3.jpg" />
+    <Content Include="Images\Teleporter_in4.jpg" />
+    <Content Include="Images\Teleporter_in5.jpg" />
+    <Content Include="Images\Teleporter_in6.jpg" />
+    <Content Include="Images\Teleporter_in_1.jpg" />
+    <Content Include="Images\Teleporter_out_1_down.jpg" />
+    <Content Include="Images\Teleporter_out_1_left.jpg" />
+    <Content Include="Images\Teleporter_out_1_right.jpg" />
+    <Content Include="Images\Teleporter_out_1_up.jpg" />
+    <Content Include="Images\Teleporter_out_2_down.jpg" />
+    <Content Include="Images\Teleporter_out_2_left.jpg" />
+    <Content Include="Images\Teleporter_out_2_right.jpg" />
+    <Content Include="Images\Teleporter_out_2_up.jpg" />
+    <Content Include="Images\Teleporter_out_3_down.jpg" />
+    <Content Include="Images\Teleporter_out_3_left.jpg" />
+    <Content Include="Images\Teleporter_out_3_right.jpg" />
+    <Content Include="Images\Teleporter_out_3_up.jpg" />
+    <Content Include="Images\Teleporter_out_4_down.jpg" />
+    <Content Include="Images\Teleporter_out_4_left.jpg" />
+    <Content Include="Images\Teleporter_out_4_right.jpg" />
+    <Content Include="Images\Teleporter_out_4_up.jpg" />
+    <Content Include="Images\Teleporter_out_5_down.jpg" />
+    <Content Include="Images\Teleporter_out_5_left.jpg" />
+    <Content Include="Images\Teleporter_out_5_right.jpg" />
+    <Content Include="Images\Teleporter_out_5_up.jpg" />
+    <Content Include="Images\Teleporter_out_6_down.jpg" />
+    <Content Include="Images\Teleporter_out_6_left.jpg" />
+    <Content Include="Images\Teleporter_out_6_right.jpg" />
+    <Content Include="Images\Teleportor_out_6_up.jpg" />
     <Content Include="Images\Wall.jpg" />
+    <Content Include="Images\ずっと.gif" />
+    <Content Include="Images\もし.gif" />
+    <Content Include="Images\ステージ選択.gif" />
+    <Content Include="Images\繰り返し.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
