Fields.csとTeleporter.csを追加

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomControls\CodeFile1.cs" />
+    <Compile Include="Fields\Fields.cs" />
     <Compile Include="Forms\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +67,7 @@
     <Compile Include="Helpers\Types.cs" />
     <Compile Include="Images\CodeFile1.cs" />
     <Compile Include="Objects\Enemies\Enemy.cs" />
+    <Compile Include="Objects\FieldObjects\Teleporter.cs" />
     <Compile Include="Objects\FieldObjects\Wall.cs" />
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="Objects\Goal\Goal.cs" />
