GameForm.cs（Wall，Goal表示）
2019/08/02
stage1~6は成功
stage7~10（Teleporter）を含むstageは修正中

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -86,15 +86,15 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Fields\stage1.json" />
-    <None Include="Fields\stage10.json" />
+    <EmbeddedResource Include="Fields\stage10.json" />
     <EmbeddedResource Include="Fields\stage2.json" />
-    <None Include="Fields\stage3.json" />
-    <None Include="Fields\stage4.json" />
-    <None Include="Fields\stage5.json" />
-    <None Include="Fields\stage6.json" />
-    <None Include="Fields\stage7.json" />
-    <None Include="Fields\stage8.json" />
-    <None Include="Fields\stage9.json" />
+    <EmbeddedResource Include="Fields\stage3.json" />
+    <EmbeddedResource Include="Fields\stage4.json" />
+    <EmbeddedResource Include="Fields\stage5.json" />
+    <EmbeddedResource Include="Fields\stage6.json" />
+    <EmbeddedResource Include="Fields\stage7.json" />
+    <EmbeddedResource Include="Fields\stage8.json" />
+    <EmbeddedResource Include="Fields\stage9.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -115,47 +115,47 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\Enemy.jpg" />
-    <Content Include="Images\Enemy_left.jpg" />
-    <Content Include="Images\Enemy_right.jpg" />
-    <Content Include="Images\Enemy_up.jpg" />
-    <Content Include="Images\Goal.jpg" />
-    <Content Include="Images\Player_Down.jpg" />
-    <Content Include="Images\Player_Left.jpg" />
+    <EmbeddedResource Include="Images\Enemy.jpg" />
+    <EmbeddedResource Include="Images\Enemy_left.jpg" />
+    <EmbeddedResource Include="Images\Enemy_right.jpg" />
+    <EmbeddedResource Include="Images\Enemy_up.jpg" />
+    <EmbeddedResource Include="Images\Goal.jpg" />
+    <EmbeddedResource Include="Images\Player_Down.jpg" />
+    <EmbeddedResource Include="Images\Player_Left.jpg" />
     <EmbeddedResource Include="Images\Player_None.jpg" />
-    <Content Include="Images\Player_Right.jpg" />
-    <Content Include="Images\Player_Up.jpg" />
-    <Content Include="Images\Teleporer_in2.jpg" />
-    <Content Include="Images\Teleporter_in3.jpg" />
-    <Content Include="Images\Teleporter_in4.jpg" />
-    <Content Include="Images\Teleporter_in5.jpg" />
-    <Content Include="Images\Teleporter_in6.jpg" />
-    <Content Include="Images\Teleporter_in_1.jpg" />
-    <Content Include="Images\Teleporter_out_1_down.jpg" />
-    <Content Include="Images\Teleporter_out_1_left.jpg" />
-    <Content Include="Images\Teleporter_out_1_right.jpg" />
-    <Content Include="Images\Teleporter_out_1_up.jpg" />
-    <Content Include="Images\Teleporter_out_2_down.jpg" />
-    <Content Include="Images\Teleporter_out_2_left.jpg" />
-    <Content Include="Images\Teleporter_out_2_right.jpg" />
-    <Content Include="Images\Teleporter_out_2_up.jpg" />
-    <Content Include="Images\Teleporter_out_3_down.jpg" />
-    <Content Include="Images\Teleporter_out_3_left.jpg" />
-    <Content Include="Images\Teleporter_out_3_right.jpg" />
-    <Content Include="Images\Teleporter_out_3_up.jpg" />
-    <Content Include="Images\Teleporter_out_4_down.jpg" />
-    <Content Include="Images\Teleporter_out_4_left.jpg" />
-    <Content Include="Images\Teleporter_out_4_right.jpg" />
-    <Content Include="Images\Teleporter_out_4_up.jpg" />
-    <Content Include="Images\Teleporter_out_5_down.jpg" />
-    <Content Include="Images\Teleporter_out_5_left.jpg" />
-    <Content Include="Images\Teleporter_out_5_right.jpg" />
-    <Content Include="Images\Teleporter_out_5_up.jpg" />
-    <Content Include="Images\Teleporter_out_6_down.jpg" />
-    <Content Include="Images\Teleporter_out_6_left.jpg" />
-    <Content Include="Images\Teleporter_out_6_right.jpg" />
-    <Content Include="Images\Teleportor_out_6_up.jpg" />
-    <Content Include="Images\Wall.jpg" />
+    <EmbeddedResource Include="Images\Player_Right.jpg" />
+    <EmbeddedResource Include="Images\Player_Up.jpg" />
+    <EmbeddedResource Include="Images\Teleporer_in2.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_in3.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_in4.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_in5.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_in6.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_in1.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_1_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_1_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_1_right.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_1_up.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_2_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_2_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_2_right.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_2_up.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_3_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_3_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_3_right.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_3_up.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_4_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_4_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_4_right.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_4_up.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_5_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_5_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_5_right.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_5_up.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_6_down.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_6_left.jpg" />
+    <EmbeddedResource Include="Images\Teleporter_out_6_right.jpg" />
+    <EmbeddedResource Include="Images\Teleportor_out_6_up.jpg" />
+    <EmbeddedResource Include="Images\Wall.jpg" />
     <Content Include="Images\ずっと.gif" />
     <Content Include="Images\もし.gif" />
     <Content Include="Images\ステージ選択.gif" />
