--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -156,6 +156,7 @@
     <EmbeddedResource Include="Images\Teleporter_out_6_right.jpg" />
     <EmbeddedResource Include="Images\Teleporter_out_6_up.jpg" />
     <EmbeddedResource Include="Images\Wall.jpg" />
+    <Content Include="Images\back.png" />
     <Content Include="Images\ずっと.gif" />
     <Content Include="Images\もし.gif" />
     <Content Include="Images\ステージ選択.gif" />
