field画面の大きさ追従機能を追加
2019/08/05
全画面表示やウィンドウの大きさを変更した際に、backpictureboxの大きさが変更されるようになった

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -157,6 +157,7 @@
     <EmbeddedResource Include="Images\Teleporter_out_6_up.jpg" />
     <EmbeddedResource Include="Images\Wall.jpg" />
     <Content Include="Images\back.png" />
+    <EmbeddedResource Include="Images\background.png" />
     <Content Include="Images\ずっと.gif" />
     <Content Include="Images\もし.gif" />
     <Content Include="Images\ステージ選択.gif" />
