--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -56,6 +56,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\GameForm.Designer.cs">
+      <SubType>Form</SubType>
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Selectstage.cs">
@@ -63,6 +64,7 @@
     </Compile>
     <Compile Include="Forms\Selectstage.Designer.cs">
       <DependentUpon>Selectstage.cs</DependentUpon>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Helpers\Types.cs" />
     <Compile Include="Images\CodeFile1.cs" />
