ゲーム画面をフルスクリーン表示に，stage11~15を追加，Gameformがバックグラウンドで動き続けるバグを解消
2019/08/06
GameForm，SelectStageFormをフルスクリーン表示に

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -99,6 +99,11 @@
     <EmbeddedResource Include="Fields\stage7.json" />
     <EmbeddedResource Include="Fields\stage8.json" />
     <EmbeddedResource Include="Fields\stage9.json" />
+    <EmbeddedResource Include="Fields\stage11.json" />
+    <EmbeddedResource Include="Fields\stage12.json" />
+    <EmbeddedResource Include="Fields\stage13.json" />
+    <EmbeddedResource Include="Fields\stage14.json" />
+    <EmbeddedResource Include="Fields\stage15.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
