StageClear,AllStageClear,GameForm微修正
StageClear.form: layout変更，ステージ選択画像変更
AllStageClear.form: layout変更，ステージ選択画像変更
GameForm: 繰り返しボタン画像変更

--- a/unilab2019/Unilab2019.csproj
+++ b/unilab2019/Unilab2019.csproj
@@ -201,6 +201,7 @@
     <EmbeddedResource Include="Images\startButton.png" />
     <None Include="Images\StageClear.jpg" />
     <None Include="Images\stageSelect.png" />
+    <None Include="Images\stageSelect.png.png" />
     <Content Include="Images\ずっと.gif" />
     <Content Include="Images\もし.gif" />
     <Content Include="Images\ステージ選択.gif" />
